--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,10 +15,10 @@
       <header class="page-header">
         <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
         <a class="page-header__title-link" href="index.html"></a>
-        <button class="page-header__toggle" type="button">
+        <button class="page-header__toggle page-header__toggle--disabled" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--index main-nav--inline">
           <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">главная</a>
@@ -42,7 +42,7 @@
           <h2 class="visually-hidden">Перечень основных товаров</h2>
           <ul class="shop__list">
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop1.webp 1x, /img/catalog-laptop1@2x.webp 2x">
@@ -87,7 +87,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop2.webp 1x, /img/catalog-laptop2@2x.webp 2x">
@@ -132,7 +132,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
@@ -177,7 +177,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop4.webp 1x, /img/catalog-laptop4@2x.webp 2x">
@@ -222,7 +222,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop5.webp 1x, /img/catalog-laptop5@2x.webp 2x">
@@ -267,7 +267,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop6.webp 1x, /img/catalog-laptop6@2x.webp 2x">
@@ -312,7 +312,7 @@
               </div>
             </li>
             <li class="shop__card card">
-              <div class="card-wrapper">
+              <div class="card__wrapper">
                 <a class="card__link photo-link" href="">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)" srcset="/img/catalog-laptop7.webp 1x, /img/catalog-laptop7@2x.webp 2x">
@@ -357,10 +357,7 @@
               </div>
             </li>
 
-
-
-
-            <li class="shop__card card card-last">
+            <li class="shop__card card card--last">
               <div class="card__extended-view-wrapper">
                 <p class="card__full-view">Показать еще 100500 товаров</p>
                 <p class="card__description">На самом деле вкусов гораздо больше!</p>
@@ -415,8 +412,8 @@
     </main>
 
     <footer class="page__footer">
-      <section class="footer-contacts footer-contacts--white-background">
-        <div class="footer-contacts-wrapper">
+      <section class="footer-contacts">
+        <div class="footer-contacts__wrapper">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
           <div class="footer-contacts__address-wrapper">
@@ -429,46 +426,65 @@
           allowfullscreen="" loading="lazy"></iframe>
       </section>
       <section class="footer-media">
-        <div class="footer-media-wrapper">
+        <div class="footer-media__wrapper">
           <h2 class="visually-hidden">Медиа и социальные сети</h2>
           <a class="footer-media__logo" href="index.html">
             <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
               height="24">
           </a>
           <ul class="social">
-            <li class="social__item">
-              <a class="social__link vk-logo" href=""></a>
+            <li class="social__item social__item--first">
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--vk">
+                  <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
+                </svg>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link insta-logo" href=""></a>
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--insta">
+                  <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social__item">
-              <a class="social__link fb-logo" href=""></a>
+            <li class="social__item social__item--last">
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--fb">
+                  <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
+                </svg>
+              </a>
             </li>
           </ul>
           <div class="footer-media__HTML-academy-wrapper">
-            <a class="footer-media__HTML-academy-logo"
-              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+          <a class="footer-media__HTML-academy"
+          href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+              <span class="footer-media__HTML-academy-label">HTML Academy</span>
+              <svg class="footer-media__HTML-academy-logo">
+                <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
     </footer>
 
-  <script>
-    var navMain = document.querySelector('.main-nav');
-    var navToggle = document.querySelector('.page-header__toggle');
+    <script>
+      var navMain = document.querySelector('.main-nav');
+      var navToggle = document.querySelector('.page-header__toggle');
 
-    navMain.classList.remove('main-nav--nojs');
+      navMain.classList.add('main-nav--closed');
+      navMain.classList.remove('main-nav--inline');
+      navToggle.classList.remove('page-header__toggle--disabled');
 
-    navToggle.addEventListener('click', function() {
-      if (navMain.classList.contains('main-nav--closed')) {
-        navMain.classList.remove('main-nav--closed');
-        navToggle.classList.add('page-header__toggle--cross');
-      } else {
-        navMain.classList.add('main-nav--closed');
-        navToggle.classList.remove('page-header__toggle--cross');
-      }
-    });
-  </script>
+      navToggle.addEventListener('click', function () {
+        if (navMain.classList.contains('main-nav--closed')) {
+          navMain.classList.remove('main-nav--closed');
+          navToggle.classList.add('page-header__toggle--cross');
+        } else {
+          navMain.classList.add('main-nav--closed');
+          navToggle.classList.remove('page-header__toggle--cross');
+        }
+      });
+    </script>
 
 </body>
