--- a/source/form.html
+++ b/source/form.html
@@ -15,10 +15,10 @@
       <header class="page-header">
         <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
         <a class="page-header__title-link" href="index.html"></a>
-        <button class="page-header__toggle" type="button">
+        <button class="page-header__toggle page-header__toggle--disabled" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <nav class="main-nav main-nav--closed">
+        <nav class="main-nav main-nav--index main-nav--inline">
           <ul class="main-nav__list">
             <li class="main-nav__item">
               <a class="main-nav__link" href="index.html">главная</a>
@@ -35,7 +35,7 @@
     </div>
     <main class="page__main">
       <div class="page__form-wrapper">
-        <h1 class="main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
+        <h1 class="page__main-title visually-hidden">Форма регистрации для подбора программы Cat energy</h1>
         <section class="bio-data">
           <h2 class="bio-data__title">Подбор программы</h2>
           <p class="bio-data__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
@@ -75,12 +75,19 @@
               <ul class="data-form__list">
                 <li class="data-form__item">
                   <label class="data-form__label" for="email">E-mail:*</label>
-                  <input class="data-form__input contacts-input" type="email" name="email" id="email"
+                  <input class="data-form__input data-form__input--email contacts-input" type="email" name="email" id="email"
                     placeholder="KUKLACHEV@GMAIL.COM" required>
+                  <svg class="data-form__icon data-form__icon--envelope">
+                    <use xlink:href="img/icons/sprite.svg#envelope"></use>
+                  </svg>
                 </li>
                 <li class="data-form__item">
                   <label class="data-form__label" for="phone">Телефон:*</label>
-                  <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90" required pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
+                  <input class="data-form__input data-form__input--phone" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90"
+                    required pattern="^[0-9]{1} \([0-9]{3}\) [0-9]{3}-[0-9]{2}-[0-9]{2}">
+                  <svg class="data-form__icon data-form__icon--phone">
+                    <use xlink:href="img/icons/sprite.svg#phone"></use>
+                  </svg>
                 </li>
               </ul>
             </div>
@@ -122,8 +129,8 @@
       </div>
     </main>
     <footer class="page__footer">
-      <section class="footer-contacts footer-contacts--white-background">
-        <div class="footer-contacts-wrapper">
+      <section class="footer-contacts">
+        <div class="footer-contacts__wrapper">
           <h2 class="visually-hidden">Контакты</h2>
           <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
           <div class="footer-contacts__address-wrapper">
@@ -136,26 +143,43 @@
           allowfullscreen="" loading="lazy"></iframe>
       </section>
       <section class="footer-media">
-        <div class="footer-media-wrapper">
+        <div class="footer-media__wrapper">
           <h2 class="visually-hidden">Медиа и социальные сети</h2>
           <a class="footer-media__logo" href="index.html">
             <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
               height="24">
           </a>
           <ul class="social">
-            <li class="social__item">
-              <a class="social__link vk-logo" href=""></a>
+            <li class="social__item social__item--first">
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--vk">
+                  <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
+                </svg>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link insta-logo" href=""></a>
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--insta">
+                  <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social__item">
-              <a class="social__link fb-logo" href=""></a>
+            <li class="social__item social__item--last">
+              <a class="social__link" href="">
+                <svg class="social__logo social__logo--fb">
+                  <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
+                </svg>
+              </a>
             </li>
           </ul>
           <div class="footer-media__HTML-academy-wrapper">
-            <a class="footer-media__HTML-academy-logo"
-              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+            <a class="footer-media__HTML-academy"
+              href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+              <span class="footer-media__HTML-academy-label">HTML Academy</span>
+              <svg class="footer-media__HTML-academy-logo">
+                <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+              </svg>
+            </a>
           </div>
         </div>
       </section>
@@ -166,9 +190,11 @@
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.page-header__toggle');
 
-    navMain.classList.remove('main-nav--nojs');
+    navMain.classList.add('main-nav--closed');
+    navMain.classList.remove('main-nav--inline');
+    navToggle.classList.remove('page-header__toggle--disabled');
 
-    navToggle.addEventListener('click', function() {
+    navToggle.addEventListener('click', function () {
       if (navMain.classList.contains('main-nav--closed')) {
         navMain.classList.remove('main-nav--closed');
         navToggle.classList.add('page-header__toggle--cross');
