--- a/source/index.html
+++ b/source/index.html
@@ -18,10 +18,10 @@
     <header class="page-header">
       <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
       <a class="page-header__title-link" href="index.html"></a>
-      <button class="page-header__toggle" type="button">
+      <button class="page-header__toggle page-header__toggle--disabled" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
-      <nav class="main-nav main-nav-index main-nav--closed">
+      <nav class="main-nav main-nav--index main-nav--inline">
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--active" href="">главная</a>
@@ -38,7 +38,7 @@
   </div>
 
   <main class="page__main">
-    <h1 class="page__main-title visually-hidden">Cat Energy - функциональное питание для котов</h1>
+    <h1 class="page__title visually-hidden">Cat Energy - функциональное питание для котов</h1>
     <div class="product-info__outer-wrapper">
       <section class="product-info">
         <div class="product-info__wrapper">
@@ -48,9 +48,9 @@
             <a class="product-info__program-selection button" href="form.html">подобрать программу</a>
           </div>
           <ul class="programs">
-            <li class="programs__item programs__item-slim">
+            <li class="programs__item programs__item--slim">
               <h3 class="programs__title">Похудение</h3>
-              <div class="programs-description-wrapper">
+              <div class="programs__description-wrapper">
                 <p class="programs__description">
                   Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
                   Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
@@ -59,9 +59,9 @@
                 <a class="programs__link" href="">каталог slim</a>
               </div>
             </li>
-            <li class="programs__item programs__item-mass">
+            <li class="programs__item programs__item--mass">
               <h3 class="programs__title">Набор массы</h3>
-              <div class="programs-description-wrapper">
+              <div class="programs__description-wrapper">
                 <p class="programs__description">
                   Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
                   поможет вашему коту нарастить необходимые мышцы!
@@ -81,24 +81,24 @@
         <ul class="advantages__list">
           <li class="advantages__item">
             <span class="advantages__description-number">1</span>
-            <p class="advantages__description advantages__description-bio">Функциональное питание
+            <p class="advantages__description advantages__description--bio">Функциональное питание
               содержит только полезные
               питательные вещества.</p>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description-powder">Выпускается в виде порошка,
+            <p class="advantages__description advantages__description--powder">Выпускается в виде порошка,
               который нужно лишь залить
               кипятком и готово.</p>
             <span class="advantages__description-number">2</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description-meal">Замените один-два приема
+            <p class="advantages__description advantages__description--meal">Замените один-два приема
               обычной еды на наше
               функциональное питание.</p>
             <span class="advantages__description-number">3</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description-time">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time">Уже через месяц наслаждайтесь изменениями
               к
               лучшему вашего питомца!</p>
             <span class="advantages__description-number">4</span>
@@ -133,7 +133,7 @@
             </div>
           </div>
         </div>
-        <div class="example__slider">
+        <div class="example__slider slider">
           <div class="slider__cat-image-wrapper">
             <span class="slider__cat-image-fat"></span>
             <span class="slider__cat-image-slim"></span>
@@ -149,7 +149,7 @@
   </main>
   <footer class="page__footer">
     <section class="footer-contacts">
-      <div class="footer-contacts-wrapper">
+      <div class="footer-contacts__wrapper">
         <h2 class="visually-hidden">Контакты</h2>
         <p class="footer-contacts__invitation">приглашаем <br> к сотрудничеству дилеров!</p>
         <div class="footer-contacts__address-wrapper">
@@ -162,30 +162,43 @@
         allowfullscreen="" loading="lazy"></iframe>
     </section>
     <section class="footer-media">
-      <div class="footer-media-wrapper">
+      <div class="footer-media__wrapper">
         <h2 class="visually-hidden">Медиа и социальные сети</h2>
         <a class="footer-media__logo" href="index.html">
           <img class="footer-media__logo-title" src="/img/header-title.svg" alt="Баннер Cat Energy" width="128"
             height="24">
         </a>
         <ul class="social">
-          <li class="social__item">
-            <a class="social__link vk-logo" href=""></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link insta-logo" href="">
-              <!-- <svg>
-                <use xlink:href="img/icons/sprite.svg#insta-logo"></use>
-              </svg> -->
+          <li class="social__item social__item--first">
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--vk">
+                <use xlink:href="img/icons/sprite.svg#vk-logo-big"></use>
+              </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link fb-logo" href=""></a>
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--insta">
+                <use xlink:href="img/icons/sprite.svg#insta-logo-big"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social__item social__item--last">
+            <a class="social__link" href="">
+              <svg class="social__logo social__logo--fb">
+                <use xlink:href="img/icons/sprite.svg#fb-logo-big"></use>
+              </svg>
+            </a>
           </li>
         </ul>
         <div class="footer-media__HTML-academy-wrapper">
-          <a class="footer-media__HTML-academy-logo"
-            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">HTML Academy</a>
+        <a class="footer-media__HTML-academy"
+        href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+            <span class="footer-media__HTML-academy-label">HTML Academy</span>
+            <svg class="footer-media__HTML-academy-logo">
+              <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
+            </svg>
+          </a>
         </div>
       </div>
     </section>
@@ -194,7 +207,9 @@
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.page-header__toggle');
 
-    navMain.classList.remove('main-nav--nojs');
+    navMain.classList.add('main-nav--closed');
+    navMain.classList.remove('main-nav--inline');
+    navToggle.classList.remove('page-header__toggle--disabled');
 
     navToggle.addEventListener('click', function () {
       if (navMain.classList.contains('main-nav--closed')) {
