--- a/source/form.html
+++ b/source/form.html
@@ -16,7 +16,13 @@
     <div class="page-header__wrapper">
       <header class="page-header">
         <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-        <a class="page-header__title-link" href="index.html"></a>
+        <a class="page-header__title-link" href="index.html">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px" height="59px">
+            <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px" height="52px">
+            <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px" height="18px">
+          </picture>
+        </a>
         <button class="page-header__toggle page-header__toggle--disabled" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
