--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,16 @@
 <body class="page__body">
   <div class="page-header__wrapper">
     <header class="page-header">
-      <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
-      <a class="page-header__title-link" href="index.html"></a>
+      <a class="page-header__logo-link" href="index.html">
+        <img class="page-header__logo" src="/img/logo-mobile.svg" alt="Логотип Веселый кот" width="33" height="38">
+      </a>
+      <a class="page-header__title-link" href="index.html">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg" alt="Логотип Cat Energy" width="202px" height="59px">
+          <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg" alt="Логотип Cat Energy" width="174px" height="52px">
+          <img class="page-header__title-picture" src="/img/header-title.svg" alt="Логотип Cat Energy" width="101px" height="18px">
+        </picture>
+      </a>
       <button class="page-header__toggle page-header__toggle--disabled" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
@@ -79,7 +87,8 @@
         <ul class="advantages__list">
           <li class="advantages__item">
             <span class="advantages__description-number">1</span>
-            <p class="advantages__description advantages__description--bio">Функциональное питание<br> содержит только полезные
+            <p class="advantages__description advantages__description--bio">Функциональное питание<br> содержит только
+              полезные
               питательные вещества.</p>
           </li>
           <li class="advantages__item">
@@ -95,10 +104,12 @@
             <span class="advantages__description-number">3</span>
           </li>
           <li class="advantages__item">
-            <p class="advantages__description advantages__description--time advantages__description--time-mobile">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time advantages__description--time-mobile">Уже
+              через месяц наслаждайтесь изменениями
               к
               лучшему вашего питомца!</p>
-            <p class="advantages__description advantages__description--time advantages__description--time-tablet">Уже через месяц наслаждайтесь изменениями
+            <p class="advantages__description advantages__description--time advantages__description--time-tablet">Уже
+              через месяц наслаждайтесь изменениями
               к
               лучшему<br> вашего питомца!</p>
             <span class="advantages__description-number">4</span>
@@ -192,8 +203,8 @@
           </li>
         </ul>
         <div class="footer-media__HTML-academy-wrapper">
-        <a class="footer-media__HTML-academy"
-        href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
+          <a class="footer-media__HTML-academy"
+            href="https://up.htmlacademy.ru/adaptive/24/project/cat-energy#cat-energy-3-8">
             <span class="footer-media__HTML-academy-label">HTML Academy</span>
             <svg class="footer-media__HTML-academy-logo">
               <use xlink:href="img/icons/sprite.svg#html-academy-logo"></use>
@@ -203,6 +214,7 @@
       </div>
     </section>
   </footer>
+
   <script>
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.page-header__toggle');
